samples/_failures_safe/1761363627_293940_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b56a1c1.c: In function ‘main’:
./samples/SAFE/__tmp_4b56a1c1.c:144:5: error: expected expression at end of input
  144 |     const char *sample_logs[] = {
      |     ^~~~~
./samples/SAFE/__tmp_4b56a1c1.c:144:5: error: expected declaration or statement at end of input
